tests/paczka1/fuzzy1/92665157.err
Error in line 19: tlMlxFdU S211 70,4
Error in line 17: WCGO9jUC S490 74,0
Error in line 24: tlMlxFdU A41 77,2
Error in line 34: tlMlxFdU S490 -2,8
Error in line 25: S211 S490 7,3
